force-app/main/default/objects/IFv2_HomeScreenTab__c/IFv2_HomeScreenTab__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Tabs for applications to be displayed on Home screen</description>
    <label>Home Screen Tab</label>
</CustomObject>