force-app/main/default/objects/IFv2_HomeScreenTab__c/fields/AppOldName__c.field-meta.xml
<CustomField>
    <fullName>AppOldName__c</fullName>
    <inlineHelpText>This field holds the app old name.</inlineHelpText>
    <label>App old Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>