force-app/main/default/objects/IFv2_HomeScreenTab__c/fields/Starred__c.field-meta.xml
<CustomField>
    <fullName>Starred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to display if the app is starred or not.</description>
    <inlineHelpText>This field is used to display if the app is starred or not.</inlineHelpText>
    <label>Starred</label>
    <type>Checkbox</type>
</CustomField>