force-app/main/default/objects/IFv2_HomeScreenTab__c/listViews/All_Apps.listView-meta.xml
<ListView>
    <fullName>All_Apps</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>AppOldName__c</columns>
    <columns>Sequence__c</columns>
    <columns>IsActive__c</columns>
    <columns>Country__c</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>ImageName__c</columns>
    <columns>Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Apps</label>
    <language>en_US</language>
</ListView>